Trainingsession list updated